Fix UI invisible issue

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -39,7 +39,7 @@
   width: 100%;
 }
 
-.navbar {
+.navbar.header-nav {
   .left i,
   .title {
     color: #ffffff;
